<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.storyapp.activity.CustomizeActivity">

    <Button
        android:id="@+id/backToCustomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="backToCostumize"/>

    <TextView
        android:id="@+id/customizeExplainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textSize="21sp"
        tools:text="Aqui você pode mandar no final da sua história, seja criativo!" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="8"
        android:gravity="center|center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minValue"/>

            <EditText
                android:id="@+id/endGameMinValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dip"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maxValue"/>
            <EditText
                android:id="@+id/endGameMaxValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dip"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endGameText"/>
            <EditText
                android:id="@+id/endGameText"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addEndGame"
        android:onClick="addEndGame"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/finishEndGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishCustomization"
            android:onClick="finishCustomization"/>

    </LinearLayout>

</LinearLayout>