<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.storyapp.activity.MainMenuActivity">

    <TextView
        android:id="@+id/gameNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/jonas"
        android:textColor="#070707"
        android:textSize="36sp"/>
    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/play"
        android:textStyle="bold"
        android:onClick="startGame"/>
    <Button
        android:id="@+id/customizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/customize"
        android:textStyle="bold"
        android:onClick="customize"/>

</LinearLayout>